[package]
name = "example_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
ark-crypto-primitives = "0.3.0"
ark-ec = "0.3.0"
ark-ff = "0.3.0"
ark-marlin = "0.3.0"
ark-serialize = "0.3.0"
ark-std = { version = "0.3.0", features = ["std"] }
ark-bn254 = "0.3.0"
blake2 = { version = "0.9", default-features = false }
merlin = "3.0.0"
proof-essentials = { git = "https://github.com/linqining/proof-toolbox.git", branch = "develop"}
#proof-essentials = { path = "/Users/mac/projects/proof-toolbox"}
rand = "0.8.4"
starknet-curve = { git = "https://github.com/linqining/proof-toolbox.git",branch="develop"}
#starknet-curve = { path = "/Users/mac/projects/proof-toolbox"}
thiserror = "1.0.30"
serde = "1.0"
serde_json = "1.0"
rocket = { version = "0.5.1", features = ["json"] }
mongodb = "2.8"
bcrypt = "0.15.0"
dotenv = "0.15.0"
barnett-smart-card-protocol = { git = "https://github.com/linqining/mental-poker-rust.git",branch="dev-bn254-3" }
#barnett-smart-card-protocol = {path = "/Users/mac/projects/rust/mental-poker/barnett-smart-card-protocol"}
rand_chacha = "0.3.1"
rand_core = "0.6.4"
bincode = "1.3.3"
base64 = "0.21.0"
asn1_der = "0.7.0"
hex = "0.4.3"
log = "0.4.27"

fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9" }
fastcrypto-tbls = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9" }
fastcrypto-zkp = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9", package = "fastcrypto-zkp" }
fastcrypto-vdf = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9", features = [
    "experimental",
] }

[dev-dependencies]
mockall = "0.12.1"

[target.x86_64-unknown-linux-musl] # 也支持[build]节点 设置target=...
linker = "x86_64-linux-musl-gcc"
[target.x86_64-unknown-linux-gnu]
linker = "x86_64-unknown-linux-gnu-gcc"
